updated example to use React SDK, and fixed vulnerabilities

--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "react-sdk-examples",
+  "name": "react-spa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@splitsoftware/splitio": "^10.6.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2"
-  },
-  "devDependencies": {
-    "react-scripts": "^2.1.8"
+    "@splitsoftware/splitio-react": "^1.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
